# ethash

./: .gitignore  CMakeLists.txt
include/ethash/: ethash.h  ethash.hpp  keccak.hpp  progpow.hpp
lib/ethash/: bit_manipulation.h  ethash-internal.hpp  ethash.cpp  managed.cpp  progpow.cpp
lib/support/: attributes.h
scripts/: build-linux.sh  build-windows.bat  clang-format-all.sh
tests/: firopow_test_vectors.hpp  helpers.hpp  kawpow_test_vectors.hpp  seropow_test_vectors.hpp  test_ethash.cpp  test_firopow.cpp  test_kawpow.cpp  test_keccak.cpp  test_managed.cpp  test_primes.cpp  test_progpow.cpp  test_seropow.cpp  test_update_local_context.cpp
